--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ h2 {
 
 .body {
     font-size: 1.5em;
+    display: flex;
+    justify-content: center;   
+}
+
+.body .inner {
+    max-width: 1024px;
 }
 
 .img-footer {
