--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 * {
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Frankie';
 }
 
 a {
@@ -19,17 +19,32 @@ a {
     text-align: center;
 }
 
+img {
+    max-width: 100%;
+}
+
+.affiche-wrapper img {
+    width: 300px;
+    margin-bottom: 50px;
+}
+
+.affiche-wrapper a {
+    display: block;
+    max-width: 100%;
+}
+
+h1, h2 {
+    font-family: 'Frankie';
+}
+
 h1 {
-    font-family: 'Permanent Marker', cursive;
-    font-size: 5em;
-    margin-bottom: 10px;
+    font-size: 3em;
 }
 
 h2 {
-    font-family: 'Permanent Marker', cursive;
-    font-size: 3em;
+    font-size: 2em;
     margin-top: 10px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .event {
@@ -41,7 +56,7 @@ h2 {
 }
 
 .event .description {
-    font-size: 1.8em;
+    font-size: 1.2em;
 }
 
 .event .lieu {
@@ -49,7 +64,7 @@ h2 {
 }
 
 .body {
-    font-size: 1.5em;
+    font-size: 1.2em;
     display: flex;
     justify-content: center;   
 }
@@ -59,9 +74,36 @@ h2 {
 }
 
 .img-footer {
-    margin-top: 100px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.img-footer img {
+    margin: 20px;
 }
 
 .img-footer img {
     width: 150px;
+}
+
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 5em;
+    }
+
+    h2 {
+        font-size: 3em;
+        margin-bottom: 100px;
+    }
+
+    .event .description {
+        font-size: 1.8em;
+    }
+
+    .body {
+        font-size: 1.5em;
+    }
 }
