--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ a {
     color: #CF171E;
 }
 
+ul {
+    list-style-type: square;
+}
+
 .container {
     padding: 50px;
 }
@@ -79,7 +83,7 @@ h2 {
     max-width: 1024px;
 }
 
-.img-footer {
+.footer {
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -87,12 +91,15 @@ h2 {
     flex-wrap: wrap;
 }
 
-.img-footer img {
+.footer img {
+    width: 150px;
     margin: 20px;
 }
 
-.img-footer img {
-    width: 150px;
+.liens {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (min-width: 768px) {
