Remove "balade sonore" link

--- a/src/lib/css/style.scss
+++ b/src/lib/css/style.scss
@@ -101,10 +101,10 @@ img {
     align-items: center;
 
     a {
-        border-right:15px solid black;
-        border-bottom:15px solid black;
-        width:50px;
-        height:50px;
+        border-right:10px solid #12133B;
+        border-bottom:10px solid #12133B;
+        width:30px;
+        height:30px;
         transform: rotate(-45deg);
 
         &.previous {
