--- a/src/lib/css/style.scss
+++ b/src/lib/css/style.scss
@@ -99,6 +99,11 @@ img {
   align-items: center;
 }
 
+.menu-bibliographie {
+  display: flex;
+  flex-direction: column;
+}
+
 @media screen and (min-width: 768px) {
   h1 {
     font-size: 5em;
